# gstreamer_plugin

./: README.md  autogen.sh  configure.ac
src/: Makefile.am  gstavtdecryptts.c  gstavtdecryptts.h  gstavtts.c  gstplugin.c  gstplugin.h
